# aplt-project

./: .gitignore  Makefile  Setup.hs  aplt.cabal  line.cabal  questions.md  readme.md  run_tests.sh  stack.yaml  systemt.hs
src/: BookKeeping.hs  Desugar.hs  Evaluator.hs  Grammar.cf  Main.hs  TypeChecker.hs  Types.hs  kx.cf  main.hs
src/Kx/: Abs.hs  Abs.hs.bak  Doc.txt  Doc.txt.bak  ErrM.hs  Lex.x  Lex.x.bak  Par.hs  Par.y  Par.y.bak  Print.hs  Print.hs.bak  Skel.hs  Skel.hs.bak  Test.hs
systemt/: T.cf  systemt-jp.hs  systemt.hs  types.hs
systemt/T/: Abs.hs  Doc.txt  ErrM.hs  Lex.x  Par.y  Print.hs  Skel.hs  Test.hs
test/: foo.kx  higher-order-f-app.kx  id-func.kx  nested-let.kx  prod.ks  prod.kx  prod_proj.ks  prod_proj.kx  prod_tupl.ks  prod_tupl.kx  pure-nat.kx  simple-f-app.kx  simple-let.kx  simple.kx  test-let.kx  test-sum.kx  type-dec.kx  unit.ks
